[gd_scene load_steps=13 format=3 uid="uid://4ursnx3s4woc"]

[ext_resource type="Script" uid="uid://cgy6q1mxqgtpj" path="res://main/pausemenu/pause_menu.gd" id="1_03310"]
[ext_resource type="Texture2D" uid="uid://b7cyjiij8ng1j" path="res://assets/Other/levelspicker.png" id="2_a0kxt"]
[ext_resource type="Texture2D" uid="uid://di6fjo7h7c446" path="res://assets/Other/continuebutton_normal.png" id="3_eqad1"]
[ext_resource type="Texture2D" uid="uid://wipi15oxosu5" path="res://assets/Other/continuebutton_pressed.png" id="4_bln8u"]
[ext_resource type="Texture2D" uid="uid://cpdmlabaui5fw" path="res://assets/Other/continuebutton_hover.png" id="5_8ty3o"]
[ext_resource type="Texture2D" uid="uid://g518emikjheo" path="res://assets/Other/optionsbutton_normal.png" id="6_67o3n"]
[ext_resource type="Texture2D" uid="uid://dfjj1yve7vrx7" path="res://assets/Other/optionsbutton_pressed.png" id="7_ek1f5"]
[ext_resource type="Texture2D" uid="uid://dellqy8k7mumr" path="res://assets/Other/optionsbutton_hover.png" id="8_p61j1"]
[ext_resource type="Texture2D" uid="uid://cehm8656xuyvg" path="res://assets/Other/exitbutton_normal.png" id="9_mdkmh"]
[ext_resource type="Texture2D" uid="uid://bkyxnjmc4ttko" path="res://assets/Other/exitbutton_pressed.png" id="10_bdwjj"]
[ext_resource type="Texture2D" uid="uid://c5xkaccglygfs" path="res://assets/Other/exitbutton_hover.png" id="11_h0s8q"]
[ext_resource type="AudioStream" uid="uid://t6dnjd7kpbs3" path="res://assets/sounds/sfx/click.wav" id="12_a0kxt"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_03310")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
offset_left = 3.0
offset_top = 8.0
offset_right = 171.0
offset_bottom = 211.0
texture = ExtResource("2_a0kxt")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 3.0
offset_top = 12.0
offset_right = 171.0
offset_bottom = 211.0
grow_horizontal = 2
grow_vertical = 2

[node name="PauseLabel" type="Label" parent="ButtonContainer"]
layout_mode = 2
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ContinueButton" type="TextureButton" parent="ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("3_eqad1")
texture_pressed = ExtResource("4_bln8u")
texture_hover = ExtResource("5_8ty3o")
stretch_mode = 3

[node name="OptionsButton" type="TextureButton" parent="ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("6_67o3n")
texture_pressed = ExtResource("7_ek1f5")
texture_hover = ExtResource("8_p61j1")
stretch_mode = 3

[node name="ExitButton" type="TextureButton" parent="ButtonContainer"]
layout_mode = 2
texture_normal = ExtResource("9_mdkmh")
texture_pressed = ExtResource("10_bdwjj")
texture_hover = ExtResource("11_h0s8q")
stretch_mode = 3

[node name="SfxPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_a0kxt")

[connection signal="pressed" from="ButtonContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="ButtonContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="ButtonContainer/ExitButton" to="." method="_on_exit_button_pressed"]
